--- a/config/parameters.config
+++ b/config/parameters.config
@@ -1,12 +1,12 @@
 
 #################################
-#         CONFIGURACIÓN         #
+#         CONFIGURACIÃ“N         #
 #################################
 
 host_bd=localhost
 port_bd=3306
-user_bd=applarm
-pass_bd=admin1234
+user_bd=user-name
+pass_bd=user-pass
 
 archivo_consolas=consoles.csv
 archivo_resultados=result.csv
